philly-311-citywide-meta/src/objects/FAQ1__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <page>X311TemplateFAQSample</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <page>X311TemplateFAQSamplePartner</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>X311TemplateFAQSamplePartner</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>The FAQ article type contains a question field and an answer field.</description>
    <fields>
        <fullName>Agent_Info__c</fullName>
        <description>Contains agent specific info viewable by agents and supervisors</description>
        <label>Agent Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>Upload files related to the article</description>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Author_Name__c</fullName>
        <description>Name of the author in Novo</description>
        <label>Novo Author</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>Author of the Article</description>
        <formula>IF( ISBLANK( Author_Name__c ), 
Author_Name__c,
CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName)</formula>
        <inlineHelpText>Populated with Novo Author Name if article is imported else with CreatedBy.Name</inlineHelpText>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Employees_Info__c</fullName>
        <description>Contains information intended for departmental users viewable by the departments, agents, and supervisors.</description>
        <label>City Employees Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created Date in Novo Article</description>
        <label>Novo Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>City Departments name</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Behavioral Health and Intellectual Disability Services- DBHIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Pensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Revision of Taxes- BRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Programs Office- CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Commissioners Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Planning Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Treasurer&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerce Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Life Improvement Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Human Services- DHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Attorney&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethics Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair Housing Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Judicial District/Courts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Relations Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Department/ City Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License &amp; Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director&apos;s Office- MDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayor&apos;s Office of Transportation and Utilities- MOTU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Arts, Culture &amp; Creative Economy- OACCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>Words used to help find articles related to the topic.</description>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <description>Links to web pages, forms, etc. related to the article topic.</description>
        <label>Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pictures__c</fullName>
        <description>Pictures related to article topic.</description>
        <label>Pictures</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Public_Info__c</fullName>
        <description>Contains general info with no viewing restrictions.</description>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <description>Other articles that are related to the topic.</description>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <description>Contains case that may be related to an article</description>
        <label>Related Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Special_Info_311__c</fullName>
        <description>Contains temporary information specific to and viewable to 311 users only.</description>
        <label>Special Info - 311</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Info_Public__c</fullName>
        <description>Contains temporary info available all users</description>
        <label>Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Info__c</fullName>
        <description>Contains supervisor specific info viewable by supervisors only</description>
        <label>Supervisor Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQ&apos;s</pluralLabel>
</CustomObject>